--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
             text-shadow: 0 0 10px rgba(255, 77, 109, 0.5);
             font-size: 1.1em;
             animation: pulseName 2s infinite;
+             border: 1px solid #590d22;
+            padding: 10px;
+            border-radius: 10px; 
         }
 
         h2 {
@@ -960,4 +963,5 @@
         });
     </script>
 </body>
+
 </html>
