--- a/index.html
+++ b/index.html
@@ -152,9 +152,12 @@
             text-shadow: 0 0 10px rgba(255, 77, 109, 0.5);
             font-size: 1.1em;
             animation: pulseName 2s infinite;
-             border: 1px solid #590d22;
-            padding: 10px;
-            border-radius: 10px; 
+             text-shadow: 
+        0 0 10px rgba(255, 77, 109, 0.6),
+        -1px -1px 0 #590d22,
+         1px -1px 0 #590d22,
+        -1px  1px 0 #590d22,
+         1px  1px 0 #590d22; 
         }
 
         h2 {
@@ -965,3 +968,4 @@
 </body>
 
 </html>
+
